meja/tests/recursive-let-non-function.stderr
File "tests/recursive-let-non-function.meja", line 1, characters 8-9:
Error: Cannot bind x in this recursive let:
it must have a functional type.
