meja/tests/recursive-let-non-function.meja
let rec x = 15;
